# basicMatrixOperations

./: .gitignore  CMakeLists.txt  Makefile  README.md  Readme.md  compile.sh  gpu_nn.cpp  main.cpp  nn.cpp
include/: BasicMatrixOperations.cuh  BasicMatrixOperations.hpp
src/: BasicMatrixOperations.cpp  BasicMatrixOperations.cu
test/: HelperFunctions.cpp  HelperFunctions.hpp  TestGpuMatrixArithmetic.cu  TestGpuMatrixMultiplication.cu  TestGpuMatrixTranspose.cu  TestMatrixMultiplication.cpp  TestMatrixTranspose.cpp  test.cpp
util/: CheckIfCudaDeviceIsPresent.cu
